Closed
Bug 1682141
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::dom::DocGroup::ReportPerformanceInfo]
Categories
(Core :: Performance: General, defect)
Core
Performance: General
Tracking
()
RESOLVED
FIXED
86 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox83 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | + | fixed |
| firefox86 | --- | fixed |
People
(Reporter: aryx, Assigned: farre)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
|
48 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
Crash report: https://crash-stats.mozilla.org/report/index/4118bc31-71ad-4fa5-97f2-060440201212
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll mozilla::dom::DocGroup::ReportPerformanceInfo dom/base/DocGroup.cpp:251
1 xul.dll mozilla::CollectPerformanceInfo toolkit/components/perfmonitoring/PerformanceUtils.cpp:50
2 xul.dll mozilla::dom::ContentChild::RecvRequestPerformanceMetrics dom/ipc/ContentChild.cpp:1448
3 xul.dll mozilla::dom::PContentChild::OnMessageReceived ipc/ipdl/PContentChild.cpp:9375
4 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2077
5 xul.dll mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:732
6 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1200
7 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:109
8 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:327
9 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:309
Flags: needinfo?(afarre)
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → afarre
Status: NEW → ASSIGNED
Pushed by afarre@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6713504bad2d
Stop searching for top window if there is no top window. r=peterv
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox86:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
| Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(afarre)
Comment 5•5 years ago
|
||
crashes on 86 nightly are still continuing with the patch though...
Updated•5 years ago
|
| Assignee | ||
Comment 6•5 years ago
|
||
Pushed by afarre@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c9f9c4007739
Stop searching for top window if top contex has no window context. r=smaug
Comment 8•5 years ago
|
||
| bugherder | ||
Status: REOPENED → RESOLVED
Closed: 5 years ago → 5 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 9•5 years ago
|
||
Comment on attachment 9193002 [details]
Bug 1682141 - Stop searching for top window if there is no top window. r=peterv
Beta/Release Uplift Approval Request
- User impact if declined: Bad code in beta.
- Is this code covered by automated tests?: Unknown
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Small change that doesn't change behavior, only adds checks.
- String changes made/needed:
Flags: needinfo?(afarre)
Attachment #9193002 -
Flags: approval-mozilla-beta?
| Assignee | ||
Updated•5 years ago
|
Attachment #9194402 -
Flags: approval-mozilla-beta?
Comment 10•5 years ago
|
||
Comment on attachment 9193002 [details]
Bug 1682141 - Stop searching for top window if there is no top window. r=peterv
approved for 85.0b5
Attachment #9193002 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Updated•5 years ago
|
Attachment #9194402 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 11•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•