Bug 1682141 - Stop searching for top window if there is no top window. r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D99661