dom/base/DocGroup.cpp
@@ -247,6 +247,11 @@ RefPtr<PerformanceInfoPromise> DocGroup::ReportPerformanceInfo() {
     }
 
     top = context->Top();
+
+    if (!top) {
+      continue;
+    }
+
     isTopLevel = context->IsTop();
     windowID = top->GetCurrentWindowContext()->OuterWindowId();
     break;
